message ProtoEchoRequest
{
	optional string text = 1;
}

message ProtoEchoResponse
{
    optional string text = 1;
}

